--- a/helpers/config.ipynb
+++ b/helpers/config.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fde42d4c",
+   "execution_count": 1,
+   "id": "d5237653",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   }
  ],
  "metadata": {
